Revert "feat: implement patrimoine CRUD"
