# backend/ms-patrimoine/src/main/java/com/pgvpt/api/RechercheApi.java
@@ -1,0 +1,100 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.10.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package com.pgvpt.api;
+
+import com.pgvpt.dto.CategoriePatrimoine;
+import com.pgvpt.dto.PatrimoineSummary;
+import com.pgvpt.dto.TypePatrimoine;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.10.0")
+@Validated
+@Tag(name = "Recherche", description = "Recherche et filtrage des patrimoines")
+public interface RechercheApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * GET /patrimoines/recherche : Recherche avancée de patrimoines
+     *
+     * @param q  (optional)
+     * @param type  (optional)
+     * @param categorie  (optional)
+     * @param region  (optional)
+     * @param departement  (optional)
+     * @param commune  (optional)
+     * @param latitude  (optional)
+     * @param longitude  (optional)
+     * @param rayonKm  (optional)
+     * @return Résultats de recherche (status code 200)
+     */
+    @Operation(
+        operationId = "rechercherPatrimoines",
+        summary = "Recherche avancée de patrimoines",
+        tags = { "Recherche" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Résultats de recherche", content = {
+                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = PatrimoineSummary.class)))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/patrimoines/recherche",
+        produces = { "application/json" }
+    )
+    
+    default ResponseEntity<List<PatrimoineSummary>> rechercherPatrimoines(
+        @Parameter(name = "q", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "q", required = false) String q,
+        @Parameter(name = "type", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "type", required = false) TypePatrimoine type,
+        @Parameter(name = "categorie", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "categorie", required = false) CategoriePatrimoine categorie,
+        @Parameter(name = "region", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "region", required = false) String region,
+        @Parameter(name = "departement", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "departement", required = false) String departement,
+        @Parameter(name = "commune", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "commune", required = false) String commune,
+        @Parameter(name = "latitude", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "latitude", required = false) Double latitude,
+        @Parameter(name = "longitude", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "longitude", required = false) Double longitude,
+        @DecimalMin("0") @Parameter(name = "rayonKm", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "rayonKm", required = false) Double rayonKm
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "[ { \"categorie\" : \"PATRIMOINE_NATUREL\", \"etatConservation\" : \"EXCELLENT\", \"descriptionCourte\" : \"descriptionCourte\", \"localisation\" : { \"altitude\" : 1.4658129805029452, \"departement\" : \"Dakar\", \"commune\" : \"Gorée\", \"arrondissement\" : \"arrondissement\", \"latitude\" : -75.5850925717018, \"precision\" : 5.962133916683182, \"codePostal\" : \"codePostal\", \"zoneGeographique\" : \"Petite Côte\", \"lieuDit\" : \"lieuDit\", \"distanceCentreVilleKm\" : 5.637376656633329, \"aireGeographique\" : \"aireGeographique\", \"quartier\" : \"quartier\", \"adresse\" : \"adresse\", \"region\" : \"Dakar\", \"village\" : \"village\", \"longitude\" : 36.988422590534526 }, \"id\" : \"046b6c7f-0b8a-43b9-b35d-6489e6daee91\", \"photoPrincipale\" : \"https://openapi-generator.tech\", \"type\" : \"SITE_NATUREL\", \"inscritUnesco\" : true, \"nom\" : \"nom\" }, { \"categorie\" : \"PATRIMOINE_NATUREL\", \"etatConservation\" : \"EXCELLENT\", \"descriptionCourte\" : \"descriptionCourte\", \"localisation\" : { \"altitude\" : 1.4658129805029452, \"departement\" : \"Dakar\", \"commune\" : \"Gorée\", \"arrondissement\" : \"arrondissement\", \"latitude\" : -75.5850925717018, \"precision\" : 5.962133916683182, \"codePostal\" : \"codePostal\", \"zoneGeographique\" : \"Petite Côte\", \"lieuDit\" : \"lieuDit\", \"distanceCentreVilleKm\" : 5.637376656633329, \"aireGeographique\" : \"aireGeographique\", \"quartier\" : \"quartier\", \"adresse\" : \"adresse\", \"region\" : \"Dakar\", \"village\" : \"village\", \"longitude\" : 36.988422590534526 }, \"id\" : \"046b6c7f-0b8a-43b9-b35d-6489e6daee91\", \"photoPrincipale\" : \"https://openapi-generator.tech\", \"type\" : \"SITE_NATUREL\", \"inscritUnesco\" : true, \"nom\" : \"nom\" } ]";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
